# FunnelHub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  GEMINI.md  README.md  deploy_files.py  docker-compose.prod.yml  docker-compose.yml  fix.py  fix_all.py  fix_vk.py  fix_webhook.py  patch.py  patch2.py  patch_api.py  patch_frontend.py  pyproject.toml  run_ssh_commands.py  test_api.py  test_ssh.py  worker_logs.txt
.harness/: AGENTS.md  README.md  clean-state-checklist.md  feature-list.json  init.md  progress.md  session-handoff.md  tools.md
.harness/docs/: architecture.md  autoposting.md  bot-linking.md  data-model.md  email-provider.md  funnel-engine.md  getcourse-export.md  getcourse-webhook.md  knowledge-rag.md  quality.md  reliability.md  scope.md  security.md
content/funnels/: aisu_consultation.yml  (+2 more)
inbox-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
src/: cleanup_unknown_funnel_states.py
tests/: test_auth.py  test_autopost_external_urls.py  test_autoposts.py  test_broadcasts.py  test_email_funnel_definition.py  test_email_messaging.py  test_email_provider_webhooks.py  test_followup_posts.py  test_funnel_answers.py  test_funnel_autostart.py  test_funnel_engine.py  test_funnel_runner.py  test_getcourse_api.py  test_getcourse_webhook.py  test_health.py  test_inbox.py  test_inbox_database.py  test_inbox_notifications.py  test_join_page.py  test_main.py  test_metadata.py  test_telegram_bot.py  test_telegram_messaging.py  test_vk_bot.py  test_vk_messaging.py  test_vk_oauth.py
(+60 files in other folders)
