[project]
name = "funnelhub"
version = "0.1.0"
description = "Server-side funnel communication system around GetCourse."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aiogram>=3.15.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["funnelhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
